--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "serve": "^12.0.1"
   }
 }
